Added more test cases for generating E-Prescriptions